--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,10 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  /*!* Search style var *!*/
+  --search-outline-color-rgb: 46, 133, 85 !important;
+
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +31,16 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  /*!* Search style var *!*/
+  --search-outline-color-rgb: 37, 194, 160 !important;
+}
+
+.navbar__search-input {
+  outline-color: RGB(var(--search-outline-color-rgb)) !important;
+  border: 2px solid transparent !important;
+}
+
+.navbar__search-input:hover {
+  border-color: RGB(var(--search-outline-color-rgb)) !important;
 }
