--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,7 +17,7 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
   /*!* Search style var *!*/
-  --search-outline-color-rgb: 46, 133, 85 !important;
+  --ifm-navbar-search-input-placeholder-color: var(--ifm-color-emphasis-800)
 
 }
 
@@ -33,14 +33,14 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
   /*!* Search style var *!*/
-  --search-outline-color-rgb: 37, 194, 160 !important;
+  --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>');
 }
 
 .navbar__search-input {
-  outline-color: RGB(var(--search-outline-color-rgb)) !important;
-  border: 2px solid transparent !important;
+  outline-color: var(--ifm-color-primary);
+  border: 2px solid transparent;
 }
 
 .navbar__search-input:hover {
-  border-color: RGB(var(--search-outline-color-rgb)) !important;
+  border-color: var(--ifm-color-primary);
 }
