--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -120,7 +120,7 @@ position: relative;
 }
 
 @media (max-width: 996px) {
-  footer .container {
+  .footer .container {
     flex-direction: column;
   }
 
