- Applying new docs styles - Adding new content sections - Fixing errors

--- a/src/components/DataTable/style.css
+++ b/src/components/DataTable/style.css
@@ -1,4 +1,4 @@
-.pokt-data-table.header {
+th.pokt-data-table.header {
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
