- Aligning header and sidenav font size - Changing links colors - Hiding sidenav scrollbar when user is not scrolling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,8 +17,12 @@
   /* Change collapse button color */
   --docusaurus-collapse-button-bg: #F2F2F2 !important;
   --docusaurus-collapse-button-bg-hover: #dadada !important;
-  /*!* Search style var *!*/
+
+  /* Search style var */
   --ifm-navbar-search-input-placeholder-color: var(--ifm-color-emphasis-800);
+
+  /* Hyperlinks hover */
+  --ifm-link-color: #0088CB;
 
   --ifm-menu-color-background-active: #E9ECEF;
   /* Pocket Custom */
@@ -52,8 +56,11 @@
   --docusaurus-collapse-button-bg: #272729 !important;
   --docusaurus-collapse-button-bg-hover: #232325 !important;
 
-  /*!* Search style var *!*/
+  /* Search style var */
   --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>');
+
+  /* Hyperlinks hover */
+  --ifm-link-color: #0f82af;
 
   /* Pocket Custom */
   --pokt-header-vertical-devider: #CED4DA;
@@ -171,6 +178,10 @@
   height: 62px
 }
 
+.navbar__item.navbar__link.navbar__link {
+  font-size: 14px;
+}
+
 .navbar__item.navbar__link.navbar__link--active {
   position: relative;
 }
@@ -192,10 +203,19 @@
 
 nav.menu {
   padding: 24px 16px;
+  overflow: hidden;
+}
+
+nav.menu:hover {
+  overflow-y: auto;
 }
 
 .menu__list {
   padding-left: 0 !important;
+}
+
+li > .menu__link {
+  font-size: 14px
 }
 
 li > .menu__link:not(.menu__link--active) {
