--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,32 +15,32 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
   /* Change collapse button color */
-  --docusaurus-collapse-button-bg: #F2F2F2 !important;
+  --docusaurus-collapse-button-bg: #f2f2f2 !important;
   --docusaurus-collapse-button-bg-hover: #dadada !important;
 
   /* Search style var */
   --ifm-navbar-search-input-placeholder-color: var(--ifm-color-emphasis-800);
 
   /* Hyperlinks hover */
-  --ifm-link-color: #389F58;
+  --ifm-link-color: #389f58;
 
-  --ifm-menu-color-background-active: #E9ECEF;
+  --ifm-menu-color-background-active: #e9ecef;
   /* Pocket Custom */
-  --pokt-header-vertical-devider: #353A40;
+  --pokt-header-vertical-devider: #353a40;
 
   /* Pocket Custom */
-  --pokt-nav-borders: #E3E8ED;
-  --pokt-nav-selected-border: #27292F;
+  --pokt-nav-borders: #e3e8ed;
+  --pokt-nav-selected-border: #27292f;
 
   /* Disable nav boxshadow in light mode */
   --ifm-navbar-shadow: 0;
 
   /* Disable nav nested items padding */
---ifm-menu-color: var(--ifm-color-primary)
+  --ifm-menu-color: var(--ifm-color-primary);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #e6edf3;
   --ifm-color-primary-dark: #cfd5db;
   --ifm-color-primary-darker: #b8bec2;
@@ -49,8 +49,8 @@
   /*--ifm-color-primary-lighter: #5caef3;*/
   /*--ifm-color-primary-lightest: #84c2f6;*/
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-  --ifm-navbar-background-color: #1A1B1E;
-  --ifm-menu-color-background-active: #27292F;
+  --ifm-navbar-background-color: #1a1b1e;
+  --ifm-menu-color-background-active: #27292f;
 
   /* Change collapse button color */
   --docusaurus-collapse-button-bg: #272729 !important;
@@ -63,78 +63,15 @@
   /*--ifm-link-color: #379F58;*/
 
   /* Pocket Custom */
-  --pokt-header-vertical-devider: #CED4DA;
+  --pokt-header-vertical-devider: #ced4da;
 
   /* Pocket Custom */
   --pokt-nav-borders: #343438;
-  --pokt-nav-selected-border: #EBEAEF;
+  --pokt-nav-selected-border: #ebeaef;
 }
 
-.navbar__search-input {
-  outline-color: var(--ifm-color-primary);
-  border: 2px solid transparent;
-}
-
-.navbar__search-input:hover {
-  border-color: var(--ifm-color-primary);
-}
-
-.navbar__brand {
-  margin-right: 0
-}
-
-.footer__copyright {
-  text-align: left;
-}
-
-.footer__copyright:before {
-  content: "Read and write to over 40 blockchains utilizing the only decentralized RPC infrastructure network on the planet.";
-  position: relative;
-  display: block;
-  margin: 15px 0;
-  font-size: 15px;
-  width: 400px;
-}
-
-.footer {
-  --ifm-footer-background-color: #1B242F;
-  background-color: var(--ifm-footer-background-color)
-}
-
-.footer .container {
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-.footer__links {
-  flex: 3;
-}
-
-.footer__bottom{
-  flex: 1.5;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-@media (max-width: 996px) {
-  .footer .container {
-    flex-direction: column;
-  }
-
-  .footer__bottom{
-    align-items: center;
-  }
-
-  .footer__links {
-    padding-left: 16px;
-  }
-}
-
-@media (max-width: 450px) {
-  .footer__copyright:before {
-    width: auto;
-  }
+body {
+  background-color: var(--ifm-navbar-background-color) !important;
 }
 
 .team-mgmt-table-container table {
@@ -142,61 +79,31 @@
   width: 100%;
 }
 
-
 /* Header navbar styling and layout */
-
-.navbar.navbar--fixed-top {
-  height: 140px;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.navbar__inner {
-  flex-direction: column-reverse;
-}
-
-.navbar__logo {
-  position: absolute;
-  top: 20px;
-  left: 45px;
+.navbar {
+  border-bottom: 1px solid var(--mantine-color-default-border);
+  padding: 32px;
   height: auto;
 }
-
-.navbar__items:not(.navbar__items--right) a:nth-child(3) {
-  margin-left: 30px;
-}
-
-.navbar__items.navbar__items--right {
-  flex-direction: row-reverse;
-  justify-content: flex-start;
-}
-
-.navbar__items {
-  border-bottom: 1px solid var(--pokt-nav-borders);
-  padding-left: 8px;
-  padding-right: 8px;
-  height: 62px
-}
-
-.navbar__item.navbar__link.navbar__link {
-  font-size: 14px;
-}
-
-.navbar__item.navbar__link.navbar__link--active {
+.navbar__item {
   position: relative;
 }
-
-.navbar__item.navbar__link.navbar__link--active:after {
+.navbar__item:hover {
+  color: var(--mantine-primary-color-filled);
+}
+.navbar__item.navbar__link--active:after {
   content: "";
   position: absolute;
   width: 100%;
-  border-bottom: 2px solid var(--pokt-nav-selected-border);
+  border-bottom: 2px solid var(--mantine-primary-color-filled);
   left: 0;
   bottom: -15px;
 }
+.navbar__items.navbar__items--right {
+  flex-direction: row-reverse;
+}
 
 /* Nav menu styling and spacing */
-
 .theme-doc-sidebar-item-category:not(:first-child) {
   margin-top: 24px;
 }
@@ -215,17 +122,11 @@ nav.menu:hover {
 }
 
 li > .menu__link {
-  font-size: 14px
+  font-size: 14px;
 }
 
 li > .menu__link:not(.menu__link--active) {
   font-weight: 400;
-}
-
-/* Disable collapsible list items hover effect and apply other styles */
-
-.menu__list-item-collapsible {
-  pointer-events: none;
 }
 
 li > .menu__list-item-collapsible {
@@ -235,17 +136,16 @@ li > .menu__list-item-collapsible {
   text-transform: uppercase;
 }
 
-li > .menu__list-item-collapsible > a {
-  color: #808B95 !important;
-}
+/* li > .menu__list-item-collapsible > a {
+  color: #808b95 !important;
+} */
 
 /* Navbar right section search styling */
-
 .navbar__search {
-  border: 1px solid var(--pokt-nav-borders);
+  border: 1px solid var(--mantine-color-default-border);
   border-radius: 4px;
   padding: 3px;
-  margin-right: 20px;
+  margin-right: 16px;
 }
 
 .navbar__search-input {
@@ -257,8 +157,62 @@ li > .menu__list-item-collapsible > a {
   border-color: transparent;
 }
 
-/* Color toggle button spacing */
+.navbar__item.header-link-button {
+  border-radius: 100px;
+  color: var(--mantine-color-gray-0);
+}
 
-div[class*='colorModeToggle']{
-  margin-right: 6px;
+/* Footer */
+.footer {
+  background-color: var(--ifm-navbar-background-color);
+  border-top: 1px solid var(--mantine-color-default-border);
+}
+
+.footer__copyright {
+  text-align: left;
+}
+
+.footer__copyright:before {
+  content: "Read and write to over 40 blockchains utilizing the only decentralized RPC infrastructure network on the planet.";
+  position: relative;
+  display: block;
+  margin: 15px 0;
+  font-size: 15px;
+  width: 400px;
+}
+
+.footer .container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.footer__links {
+  flex: 3;
+}
+
+.footer__bottom {
+  flex: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+@media (max-width: 996px) {
+  .footer .container {
+    flex-direction: column;
+  }
+
+  .footer__bottom {
+    align-items: center;
+  }
+
+  .footer__links {
+    padding-left: 16px;
+  }
+}
+
+@media (max-width: 450px) {
+  .footer__copyright:before {
+    width: auto;
+  }
 }
