--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -216,3 +216,8 @@ li > .menu__list-item-collapsible {
     width: auto;
   }
 }
+
+#__docusaurus
+  .mainWrapper_node_modules-\@docusaurus-theme-classic-lib-theme-Layout-styles-module {
+  display: block;
+}
