generate sidebars. start adding schema specs

--- a/src/theme/DocRoot/Layout/DocRoot.module.css
+++ b/src/theme/DocRoot/Layout/DocRoot.module.css
@@ -2,5 +2,6 @@
   padding: 16px 32px;
   background-color: var(--ifm-navbar-background-color);
   border-bottom: 1px solid var(--ifm-toc-border-color);
+  position: relative;
   z-index: 1;
 }
