--- a/src/theme/DocRoot/Layout/DocRootLayout.module.css
+++ b/src/theme/DocRoot/Layout/DocRootLayout.module.css
@@ -1,7 +1,12 @@
+:root {
+  --docs-subnav-height: 69px;
+}
+
 .subnav {
   padding: 16px 32px;
   background-color: var(--ifm-navbar-background-color);
   border-bottom: 1px solid var(--ifm-toc-border-color);
   position: relative;
   z-index: 1;
+  height: var(--docs-subnav-height);
 }
