--- a/src/theme/DocRoot/Layout/DocRootLayout.module.css
+++ b/src/theme/DocRoot/Layout/DocRootLayout.module.css
@@ -1,12 +1,31 @@
 :root {
-  --docs-subnav-height: 69px;
+  --docs-subnav-height: 50px;
 }
 
 .subnav {
-  padding: 16px 32px;
+  padding: 12px 0;
   background-color: var(--ifm-navbar-background-color);
   border-bottom: 1px solid var(--ifm-toc-border-color);
   position: relative;
   z-index: 1;
   height: var(--docs-subnav-height);
+}
+
+.link {
+  position: relative;
+  color: var(--mantine-colors-text);
+}
+
+.link:hover {
+  color: var(--mantine-primary-color-filled-hover);
+  text-decoration: none;
+}
+
+.linkActive:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  border-bottom: 2px solid var(--mantine-primary-color-filled);
+  left: 0;
+  bottom: -12px;
 }
