--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,6 +39,11 @@
   --ifm-menu-color: var(--ifm-color-primary);
 
   --ifm-navbar-height: 81px;
+
+  /* Font Family */
+  --ifm-font-family-base: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
+    Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
