fix nav label color, chain select width, remove decentralized.md, update nav lables.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -171,6 +171,9 @@ nav.menu li > .menu__list-item-collapsible {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+nav.menu li > .menu__list-item-collapsible .menu__link {
+  color: var(--mantine-color-gray-filled);
+}
 
 /* blog sidebar */
 .blog-layout nav:not(.pagination-nav) {
