--- a/src/theme/DocRoot/Layout/DocRootLayout.module.css
+++ b/src/theme/DocRoot/Layout/DocRootLayout.module.css
@@ -29,3 +29,10 @@
   left: 0;
   bottom: -12px;
 }
+
+.externalLink:after {
+  content: "↗";
+  margin-left: 4px;
+  font-size: 0.8em;
+  opacity: 0.7;
+}
