--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,9 @@
  * work well for content-centric websites.
  */
 
+/* Import service catalogue specific styles */
+@import './service-catalogue.css';
+
 :root {
   --ifm-color-primary: #1f2327;
   --ifm-color-primary-dark: #1c2023;
